# TimeSynchronizer

./: BUILD.md  CMakeLists.txt  README.md
examples/: client.cpp  server.cpp
include/: TimeSynchronizer.hpp  platform.hpp
src/: TimeSynchronizer.cpp
tests/: test_synchronizer.cpp
